# properr

./: .readthedocs.yaml  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py  index.rst
properr/: __init__.py
src/: lib.rs
tests/: rust.rs  test_import.py  test_numpy.py  test_uncertain_function.py
