[package]
name = "properr"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A modern uncertainty propagation library."

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
once_cell = "1"

[dependencies.pyo3]
version = "0.19"
optional = true
default-features = false
features = ["extension-module", "macros"]

[features]
python = ["pyo3"]
